--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
     <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js'></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    
+    <script type="text/javascript" src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+
     <div id="app"></div>
     
-    <script src="/dist/build.js"></script>
+    <script src="./build.js"></script>
   </body>
 </html>
